@@ -23,6 +23,9 @@ import static android.net.NetworkCapabilities.NET_CAPABILITY_TRUSTED;
 import static android.net.NetworkCapabilities.TRANSPORT_WIFI;
 import static android.net.wifi.WifiManager.ACTION_REMOVE_SUGGESTION_DISCONNECT;
 import static android.net.wifi.WifiManager.WIFI_STATE_ENABLED;
+import static android.net.wifi.WifiManager.ROAMING_MODE_NONE;
+import static android.net.wifi.WifiManager.ROAMING_MODE_NORMAL;
+import static android.net.wifi.WifiManager.ROAMING_MODE_AGGRESSIVE;
 
 import static com.android.server.wifi.WifiShellCommand.SHELL_PACKAGE_NAME;
 
@@ -57,6 +60,7 @@ import android.net.wifi.WifiInfo;
 import android.net.wifi.WifiNetworkSpecifier;
 import android.net.wifi.WifiNetworkSuggestion;
 import android.net.wifi.WifiScanner;
+import android.net.wifi.WifiSsid;
 import android.os.Binder;
 import android.os.Handler;
 import android.os.PatternMatcher;
@@ -65,6 +69,7 @@ import android.os.test.TestLooper;
 
 import androidx.test.filters.SmallTest;
 
+import com.android.modules.utils.ParceledListSlice;
 import com.android.modules.utils.build.SdkLevel;
 import com.android.server.wifi.coex.CoexManager;
 
@@ -78,6 +83,7 @@ import org.mockito.MockitoAnnotations;
 import java.io.FileDescriptor;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Unit tests for {@link com.android.server.wifi.WifiShellCommand}.
@@ -190,7 +196,7 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"set-poll-rssi-interval-msecs", "5"});
-        verify(mWifiGlobals, never()).setPollRssiIntervalMillis(anyInt());
+        verify(mPrimaryClientModeManager, never()).setLinkLayerStatsPollingInterval(anyInt());
         assertFalse(mWifiShellCommand.getErrPrintWriter().toString().isEmpty());
 
         BinderUtil.setUid(Process.ROOT_UID);
@@ -198,13 +204,38 @@ public class WifiShellCommandTest extends WifiBaseTest {
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"set-poll-rssi-interval-msecs", "5"});
-        verify(mWifiGlobals).setPollRssiIntervalMillis(5);
+        verify(mPrimaryClientModeManager).setLinkLayerStatsPollingInterval(5);
 
         // invalid arg
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"set-poll-rssi-interval-msecs", "0"});
         verifyNoMoreInteractions(mWifiGlobals);
+        verifyNoMoreInteractions(mPrimaryClientModeManager);
+        assertFalse(mWifiShellCommand.getErrPrintWriter().toString().isEmpty());
+
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-poll-rssi-interval-msecs", "4", "8"});
+        verify(mWifiGlobals).setPollRssiShortIntervalMillis(4);
+        verify(mWifiGlobals).setPollRssiLongIntervalMillis(8);
+        verify(mWifiGlobals).setPollRssiIntervalMillis(4);
+        verify(mPrimaryClientModeManager).setLinkLayerStatsPollingInterval(0);
+
+        // invalid arg
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-poll-rssi-interval-msecs", "8", "4"});
+        verifyNoMoreInteractions(mWifiGlobals);
+        verifyNoMoreInteractions(mPrimaryClientModeManager);
+        assertFalse(mWifiShellCommand.getErrPrintWriter().toString().isEmpty());
+
+        // invalid arg
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-poll-rssi-interval-msecs", "4", "8", "12"});
+        verifyNoMoreInteractions(mWifiGlobals);
+        verifyNoMoreInteractions(mPrimaryClientModeManager);
         assertFalse(mWifiShellCommand.getErrPrintWriter().toString().isEmpty());
     }
 
@@ -604,9 +635,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open", "-u"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isUntrusted());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isUntrusted());
         }), eq(SHELL_PACKAGE_NAME), any());
         verify(mConnectivityManager).requestNetwork(argThat(nR -> {
             return (nR.hasTransport(TRANSPORT_WIFI))
@@ -614,18 +645,18 @@ public class WifiShellCommandTest extends WifiBaseTest {
         }), any(ConnectivityManager.NetworkCallback.class));
 
         when(mWifiService.getNetworkSuggestions(any()))
-                .thenReturn(Arrays.asList(
+                .thenReturn(new ParceledListSlice<>(List.of(
                         new WifiNetworkSuggestion.Builder()
                                 .setSsid("ssid1234")
                                 .setUntrusted(true)
-                                .build()));
+                                .build())));
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"remove-suggestion", "ssid1234"});
         verify(mWifiService).removeNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isUntrusted());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isUntrusted());
         }), eq(SHELL_PACKAGE_NAME), eq(ACTION_REMOVE_SUGGESTION_DISCONNECT));
         verify(mConnectivityManager).unregisterNetworkCallback(
                 any(ConnectivityManager.NetworkCallback.class));
@@ -639,9 +670,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open", "-o"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPaid());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPaid());
         }), eq(SHELL_PACKAGE_NAME), any());
         verify(mConnectivityManager).requestNetwork(argThat(nR -> {
             return (nR.hasTransport(TRANSPORT_WIFI))
@@ -649,18 +680,18 @@ public class WifiShellCommandTest extends WifiBaseTest {
         }), any(ConnectivityManager.NetworkCallback.class));
 
         when(mWifiService.getNetworkSuggestions(any()))
-                .thenReturn(Arrays.asList(
+                .thenReturn(new ParceledListSlice<>(List.of(
                         new WifiNetworkSuggestion.Builder()
                                 .setSsid("ssid1234")
                                 .setOemPaid(true)
-                                .build()));
+                                .build())));
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"remove-suggestion", "ssid1234"});
         verify(mWifiService).removeNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPaid());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPaid());
         }), eq(SHELL_PACKAGE_NAME), eq(ACTION_REMOVE_SUGGESTION_DISCONNECT));
         verify(mConnectivityManager).unregisterNetworkCallback(
                 any(ConnectivityManager.NetworkCallback.class));
@@ -674,9 +705,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open", "-p"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPrivate());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPrivate());
         }), eq(SHELL_PACKAGE_NAME), any());
         verify(mConnectivityManager).requestNetwork(argThat(nR -> {
             return (nR.hasTransport(TRANSPORT_WIFI))
@@ -684,18 +715,18 @@ public class WifiShellCommandTest extends WifiBaseTest {
         }), any(ConnectivityManager.NetworkCallback.class));
 
         when(mWifiService.getNetworkSuggestions(any()))
-                .thenReturn(Arrays.asList(
+                .thenReturn(new ParceledListSlice<>(List.of(
                         new WifiNetworkSuggestion.Builder()
                                 .setSsid("ssid1234")
                                 .setOemPrivate(true)
-                                .build()));
+                                .build())));
         mWifiShellCommand.exec(
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"remove-suggestion", "ssid1234"});
         verify(mWifiService).removeNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).isOemPrivate());
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).isOemPrivate());
         }), eq(SHELL_PACKAGE_NAME), eq(ACTION_REMOVE_SUGGESTION_DISCONNECT));
         verify(mConnectivityManager).unregisterNetworkCallback(
                 any(ConnectivityManager.NetworkCallback.class));
@@ -708,9 +739,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                 new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                 new String[]{"add-suggestion", "ssid1234", "open"});
         verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-            return (sL.size() == 1)
-                    && (sL.get(0).getSsid().equals("ssid1234"))
-                    && (sL.get(0).getWifiConfiguration().macRandomizationSetting
+            return (sL.getList().size() == 1)
+                    && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                    && (sL.getList().get(0).getWifiConfiguration().macRandomizationSetting
                     == WifiConfiguration.RANDOMIZATION_PERSISTENT);
         }), eq(SHELL_PACKAGE_NAME), any());
 
@@ -720,9 +751,9 @@ public class WifiShellCommandTest extends WifiBaseTest {
                     new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
                     new String[]{"add-suggestion", "ssid1234", "open", "-r"});
             verify(mWifiService).addNetworkSuggestions(argThat(sL -> {
-                return (sL.size() == 1)
-                        && (sL.get(0).getSsid().equals("ssid1234"))
-                        && (sL.get(0).getWifiConfiguration().macRandomizationSetting
+                return (sL.getList().size() == 1)
+                        && (sL.getList().get(0).getSsid().equals("ssid1234"))
+                        && (sL.getList().get(0).getWifiConfiguration().macRandomizationSetting
                         == WifiConfiguration.RANDOMIZATION_NON_PERSISTENT);
             }), eq(SHELL_PACKAGE_NAME), any());
         }
@@ -1041,5 +1072,52 @@ public class WifiShellCommandTest extends WifiBaseTest {
         verify(mWifiService, times(6)).getUsableChannels(eq(WifiScanner.WIFI_BAND_BOTH_WITH_DFS),
                 anyInt(), eq(WifiAvailableChannel.FILTER_REGULATORY), eq(SHELL_PACKAGE_NAME),
                 any());
+    }
+
+    @Test
+    public void testSetSsidRoamingMode() {
+        BinderUtil.setUid(Process.ROOT_UID);
+        final String testSsid = "testssid";
+        final String hexSsid = "68656c6c6f20776f726c64";
+        ArgumentCaptor<WifiSsid> wifiSsidCaptor = ArgumentCaptor.forClass(
+                WifiSsid.class);
+
+        // Unsupported mode
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-ssid-roaming-mode", testSsid, "abcd"});
+        verify(mWifiService, never()).setPerSsidRoamingMode(any(), anyInt(), anyString());
+
+        // None mode
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-ssid-roaming-mode", testSsid, "none"});
+        verify(mWifiService).setPerSsidRoamingMode(
+                wifiSsidCaptor.capture(), eq(ROAMING_MODE_NONE), eq(SHELL_PACKAGE_NAME));
+        assertEquals("\"" + testSsid + "\"", wifiSsidCaptor.getValue().toString());
+
+        // Normal mode
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-ssid-roaming-mode", testSsid, "normal"});
+        verify(mWifiService).setPerSsidRoamingMode(
+                wifiSsidCaptor.capture(), eq(ROAMING_MODE_NORMAL), eq(SHELL_PACKAGE_NAME));
+        assertEquals("\"" + testSsid + "\"", wifiSsidCaptor.getValue().toString());
+
+        // Aggressive mode
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-ssid-roaming-mode", testSsid, "aggressive"});
+        verify(mWifiService).setPerSsidRoamingMode(
+                wifiSsidCaptor.capture(), eq(ROAMING_MODE_AGGRESSIVE), eq(SHELL_PACKAGE_NAME));
+        assertEquals("\"" + testSsid + "\"", wifiSsidCaptor.getValue().toString());
+
+        // Test with "hello world" SSID encoded in hexadecimal UTF-8
+        mWifiShellCommand.exec(
+                new Binder(), new FileDescriptor(), new FileDescriptor(), new FileDescriptor(),
+                new String[]{"set-ssid-roaming-mode", hexSsid, "aggressive", "-x"});
+        verify(mWifiService, times(2)).setPerSsidRoamingMode(
+                wifiSsidCaptor.capture(), eq(ROAMING_MODE_AGGRESSIVE), eq(SHELL_PACKAGE_NAME));
+        assertEquals("\"hello world\"", wifiSsidCaptor.getValue().toString());
     }
 }
